Bug 305878 - Account Icon toolbar item does not change.
Summary: Account Icon toolbar item does not change.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-27 12:51 UTC by Daniele E. Domenichelli
Modified: 2012-08-27 14:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-08-27 12:51:22 UTC
If the toolbar icon size is changed, the Account Icon toolbar item (the one showing the protocol used for the chat) does not change.
The correct behavior is to change according to the toolbar icon size
Comment 1 Daniele E. Domenichelli 2012-08-27 14:15:18 UTC
Git commit 3f06c0c7f9599ef9f618dfd4cdcd3e68244cab24 by Daniele E. Domenichelli.
Committed on 27/08/2012 at 15:44.
Pushed by ddomenichelli into branch 'kde-telepathy-0.5'.

Update the Account Icon toolbar item icon size when the toolbar icons size changes

Reviewed-by: Martin Klapetek <martin.klapetek@gmail.com>
FIXED-IN: 0.5.1

M  +11   -3    app/chat-window.cpp
M  +1    -3    app/chat-window.h

http://commits.kde.org/telepathy-text-ui/3f06c0c7f9599ef9f618dfd4cdcd3e68244cab24