Update the Account Icon toolbar item icon size when the toolbar icons size changes

Reviewed-by: Martin Klapetek <martin.klapetek@gmail.com>
BUG: 305878
FIXED-IN: 0.5.1